# Mylardesktop

./: .gitignore  CMakeLists.txt  Makefile  NEWS  README.md  Tracymakefile  build.sh  integrator.cpp  integrator.h  outasdf  printf  run  start  stop.sh  xzxzzxcgh'
include/: alt_tab.h  components.h  container.h  dock.h  drag.h  events.h  first.h  globals.h  hotcorners.h  hypriso.h  icons.h  popup.h  quick_shortcut_menu.h  resizing.h  second.h  settings.h  snap_preview.h  splash.h  spring.h  startup.h  titlebar.h
include/client/: raw_windowing.h  test.h  windowing.h
src/: alt_tab.cpp  components.cpp  container.cpp  dock.cpp  drag.cpp  events.cpp  first.cpp  hotcorners.cpp  hypriso.cpp  icons.cpp  popup.cpp  quick_shortcut_menu.cpp  resizing.cpp  second.cpp  settings.cpp  snap_preview.cpp  splash.cpp  startup  startup.cpp  titlebar.cpp
src/client/: build.sh  raw_windowing.cpp  test.cpp  windowing.cpp
